--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -198,7 +198,3 @@ i {
 ul.summary {
   font-size: 1.1em;
 }
-
-pre {
-  white-space: pre-wrap;
-}
